# 2024-BJTU-datastructure-finalproject

./: .gitignore  CMakeLists.txt  LICENSE  README.md  res.qrc
doc/: 中期周报.md  用例图.vsdx  立项报告 - 巡旅联觉.md  立项报告 - 方舟笑传之连连看.md  项目规范.md
server/backend/: app.py  game.db
src/: main.cpp
src/database/: user_database.cpp  user_database.h
src/game/: auto_conductor.cpp  auto_conductor.h  game_model.cpp  game_model.h  gameuser.cpp  gameuser.h
src/network/: network_handler.cpp  network_handler.h  networkhandler.cpp  networkhandler.h  ranking_record.h  user_database.cpp  user_database.h
src/ui/: login_dialog.cpp  login_dialog.h  login_dialog.ui  main_game_window.cpp  main_game_window.h  main_game_window.ui  over_dialog.cpp  over_dialog.h  over_dialog.ui  ranking_dialog.cpp  ranking_dialog.h  ranking_dialog.ui
